--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -121,7 +121,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/19/n11462628.md#1" target="_blank">可心：香港警察有选择“枪口抬高一寸”的权利</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/12/18/n2367165.md#1" target="_blank">组图：法轮功在海峡两岸的强烈对比</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/18/n11120824.md#1" target="_blank">共产暴政录：5.12汶川地震后 中共嫁祸法轮功</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -130,9 +130,9 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063480.md#1">【秦鹏观察】揭中共的大片？现实感堪比罗刹国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063380.md#1">【十字路口】郭台铭参选总统 泄台湾自保妙招？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063446.md#1">【中国禁闻】外国律所中国化 前合规官透内情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064147.md#1">【舞蹈三剑客】适合初学者！跟着神韵海报上的明星做“动态拉伸练习” feat. 王琛</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063593.md#1">【新唐人快报】刘军被查 中超6任董事长全落马</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063500.md#1">【晚间新闻】习惧暗杀？北京召开紧急军事会议</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
