--- a/gb/23/7/26/n14042480.md
+++ b/gb/23/7/26/n14042480.md
@@ -36,31 +36,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/3/n11630909.md#1" target="_blank">林辉：中共对万里长城的破坏与利用</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10173051.md#1" target="_blank">艾以：音乐家陈歌辛的最后岁月</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036151.md#1">释迦牟尼修得正果为何仍遭受果报？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030745.md#1">【古道人生】为什么他知道儿子是来讨债的？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034619.md#1">人一定能战胜天？“人定胜天”这么多年你都解释错了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040988.md#1">女子过世时灵魂变光球离体 几天前曾见天使</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/19/n14038018.md#1">【未解之谜】深度解密：S4基地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042410.md#1">【新闻大破解】13国军演连动台军 狙击中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042472.md#1">【马克时空】俄狂轰敖德萨报复 再犯冬季错误</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042299.md#1">【十字路口】王毅斗倒秦刚？兵变逼近中南海</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041502.md#1">秦刚被免 王少军离奇死 习身边频发怪事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041224.md#1">失踪整一个月 秦刚被免外交部长职务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041808.md#1">王毅回锅任外长 学者分析：习被迫换掉秦刚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14041123.md#1">谢娜得奖感言疑踩雷 节目播出画面遭删剪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041825.md#1">刀郎新歌《罗刹海市》刷屏 歌词曲风令人惊艳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14041064.md#1">陆第一网红冯提莫消失半年 自曝患甲状腺癌晚期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041711.md#1">不服一审判刑13年 吴亦凡强奸案二审开庭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041756.md#1">直呼父子年龄相差大 古巨基盼儿子早婚早育</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040808.md#1">日本77岁老翁免费为台湾游客导览伊豆高原</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14039456.md#1">精神疾病病根在线粒体？哈佛教授：生酮饮食可改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040162.md#1">口疮让人苦不堪言？中医4招对付口腔溃疡、牙龈肿痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/22/n14040052.md#1">DNA受伤让人变老 易致癌 名医教你护DNA最佳方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040447.md#1">豆浆入菜的另类吃法：豆浆泡菜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064147.md#1">【舞蹈三剑客】适合初学者！跟着神韵海报上的明星做“动态拉伸练习” feat. 王琛</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063593.md#1">【新唐人快报】刘军被查 中超6任董事长全落马</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063500.md#1">【晚间新闻】习惧暗杀？北京召开紧急军事会议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062940.md#1">喊“5年不拍戏”挨轰 胡歌：我是个奇怪的人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062574.md#1">喝水可以减重吗？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061470.md#1">7种药食同源植物 有效预防和治疗新冠病毒</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/26/n14042480.htm">麦康奈尔在新闻发布会上突然僵住 引健康担忧</a></p><hr>
