--- a/gb/23/1/2/n13897485.md
+++ b/gb/23/1/2/n13897485.md
@@ -14,8 +14,9 @@
 <p>网友“南北的南南北的北”12月29日发博文表示，这波疫情太猛烈了。华师文学院十天之内走了三名退休老师，有两人属于大家都认为身体精神不错的。昨天又听到中南财经政法大学的古远清走了。古远清夫妇俩近日染上新冠并发症，求助无门。四天前，古夫人古炽珍辞世，昨天下午4点半他也走了。知情者说，开始去了两个社区医院，不收。后来到陆军总医院，人山人海，就回家了。半小时之后，在沙发上就过世了。</p>
 <p>“南北的南南北的北”还写道：“前两天听说武大的一对退休老师（夫妻）也是，一位走了没两天，另一位也走了。这死亡人数，就我自己的感觉，比20年还要多。”</p>
 <p>网上还流出武汉作家方方发布的朋友圈，方方自称与远清认识多年，“他不止是我的学长，也曾经在我办杂志时多次给我们写稿。”</p>
+<figure id="attachment_13897755" aria-describedby="caption-attachment-13897755" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13897755-ff.jpeg"><img class="size-large wp-image-13897755" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897755-ff-600x1051.jpeg" alt="" width="600" b="1051" /></a><figcaption id="caption-attachment-13897755" class="wp-caption-text">网上流出武汉作家方方发布的朋友圈。（网页截图）</figcaption></figure>
 <p>她写道：可在昨天，看到信息，古远清教授没有留下一句话就告别了这个世界！没有留下任何遗言。</p>
-<p>方方表示，“真是让人震惊。难以想像古老师坐在沙上那半小时的沮丧、无助以及悲伤&#8230;&#8230;他恐怕从未预料过自己生病时会求医无门，更未预料过自己夫妇二人在5天内先后离世。面对这样的死亡，让我们这些苟活者如何开口对他说‘一路走好’，又如何请他‘安息’。惟有更深的悲哀而已。”</p>
+<p>方方表示，“真是让人震惊。难以想像古老师坐在沙发上那半小时的沮丧、无助以及悲伤&#8230;&#8230;他恐怕从未预料过自己生病时会求医无门，更未预料过自己夫妇二人在5天内先后离世。面对这样的死亡，让我们这些苟活者如何开口对他说‘一路走好’，又如何请他‘安息’。惟有更深的悲哀而已。”</p>
 <p>中国这轮疫情大爆发以来，中共官员、中共体制的各界名人密集去世。公开的官方讣告中将他们的死因归为“因病医治无效”，但舆论多质疑与疫情爆发有关。</p>
 <p>责任编辑：林琮文</p>
 	
@@ -23,39 +24,39 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897455.md#1">内蒙古高校副书记王涛染疫死亡 终年52岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897453.md#1">疫情爆发期 参与设计人民币的侯一民去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897393.md#1">中共院士密集离世 一个月病亡数接近过去一年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897396.md#1">疫情爆发中共开放出入境 日本民众：不道德</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064035.md#1">“苏拉”逼近广东 梅州爆洪灾 或现“三台风”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064008.md#1">浙江台州一民房起火 一家六口人全部遇难</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063500.md#1">【晚间新闻】习惧暗杀？北京召开紧急军事会议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063924.md#1">【全球新闻】普里戈津低调下葬 普京隐身</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/9/n10377672.md#1" target="_blank">林辉：民国三位大师眼中的共产主义很可怕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/19/n10862316.md#1" target="_blank">刘晓：祠堂被毁 不孝子孙愧对先祖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/27/n3973738.md#1" target="_blank">净仁：通向人类生命的真正幸福</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891849.md#1">【未解之谜】预言家珍妮之一 肯尼迪家族的“诅咒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896702.md#1">【舞蹈三剑客】为什么被中国禁演？关于神韵的6大常见疑问！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897103.md#1">【十字路口】跨年特别节目：2022年世界之最</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894469.md#1">【探索时分】台湾国机国造之路  开发新一代战机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896554.md#1">冯小刚：在国外三个多月没阳 回国十来天阳了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896032.md#1">【一线采访】河北疫情雪崩 医院接近崩溃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895920.md#1">学者：疫情大爆发 中国两种声音激烈较量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896835.md#1">台娱圈新年首发喜弹 翁立友“已登记”不宴客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896444.md#1">李钟硕与IU公开恋情 已交往4个多月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895820.md#1">周晓涵要求打戏来真的 曝陈亚兰不照剧本演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895784.md#1">弥补获奖感言遗憾 汤唯隔空感谢丈夫和女儿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895588.md#1">大陆名导、北电教授许同均疑因染疫病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896498.md#1">党媒终于承认染疫后遗症 心肌炎多发于中青年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895183.md#1">在游轮上度假如何省钱？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895270.md#1">间歇性断食的九大好处和实行方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894407.md#1">缺乏维生素B12 出血性中风风险可能增加</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064147.md#1">【舞蹈三剑客】适合初学者！跟着神韵海报上的明星做“动态拉伸练习” feat. 王琛</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063593.md#1">【新唐人快报】刘军被查 中超6任董事长全落马</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063500.md#1">【晚间新闻】习惧暗杀？北京召开紧急军事会议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062940.md#1">喊“5年不拍戏”挨轰 胡歌：我是个奇怪的人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062574.md#1">喝水可以减重吗？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061470.md#1">7种药食同源植物 有效预防和治疗新冠病毒</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/2/n13897485.htm">武汉教授去世 知情人爆其染疫在沙发上过世</a></p><hr>
